--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,10 @@
 
     <div class="menu-items-container u-d-flex u-justify-content-space-between u-flex-1">
       <div class="logo-container u-d-flex u-justify-content-center">
-        <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image">
+        <div class="header-img-color">
+          <%=image_tag 'Plus1-01.png', class: 'logo-img' %>
+        </div>
+<!--        <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image">-->
       </div>
       <div class="menu-items-center u-flex-1 menu-item-mob">
       <div class="menu-items u-d-flex ">
