--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -85,6 +85,7 @@
   text-transform: uppercase;
   height: 55px;
   line-height: 55px;
+  cursor: pointer;
   padding: 0 38px;
   border-radius: 50px;
   &-submit{
