--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -192,6 +192,9 @@
     <div class="counter-back-image">
       <div class="counter-background-color-blue">
         <div class="counter-item">
+          <div class="counter-item-image-container counter-item-image-container-first">
+            <%=image_tag 'Slider4/Oncology .png' %>
+          </div>
           <div class="count counter-value">
             25
           </div>
@@ -200,6 +203,9 @@
           </div>
         </div>
         <div class="counter-item">
+          <div class="counter-item-image-container">
+            <%=image_tag 'Slider4/Neuro.png' %>
+          </div>
           <div class="count counter-value">
             12
           </div>
@@ -208,6 +214,9 @@
           </div>
         </div>
         <div class="counter-item">
+          <div class="counter-item-image-container">
+            <%=image_tag 'Slider4/Ortho.png' %>
+          </div>
           <div class="count counter-value">
            9
           </div>
@@ -216,6 +225,9 @@
           </div>
         </div>
         <div class="counter-item">
+          <div class="counter-item-image-container ">
+            <%=image_tag 'Slider4/Cardio.png' %>
+          </div>
           <div class="count counter-value">
             5
           </div>
