--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -286,6 +286,23 @@
     width: 25%;
     text-align: center;
     min-width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    &-image-container{
+      height: 200px;
+      width: 200px;
+      //margin-bottom: -50px;
+      //text-align: center;
+      &-first{
+        margin-bottom: -50px;
+      }
+      & img{
+        height: 100%;
+        width: 100%;
+      }
+    }
   }
   &-value{
     color: #ffffff;
