--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,9 +11,10 @@
         <div class="footer-socail-link">
           <i class="fa fa-facebook footer-icon"></i>
           <i class="fa fa-instagram footer-icon"></i>
-          <i class="fa fa-twitter footer-icon" ></i>
-          <i class="fa fa-google-plus footer-icon"></i>
-          <i class="fa fa-pinterest footer-icon"></i>
+          <i class="fa fa-youtube footer-icon"></i>
+<!--          <i class="fa fa-twitter footer-icon" ></i>-->
+<!--          <i class="fa fa-google-plus footer-icon"></i>-->
+<!--          <i class="fa fa-pinterest footer-icon"></i>-->
         </div>
       </div>
       <div class="footer-col footer-col2">
@@ -35,14 +36,14 @@
         <div class="footer-col-heading">
           Instagram
         </div>
-        <div class="footer-col-instagram-grid">
-          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">
-          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">
-          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">
-          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">
-          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">
-          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">
-        </div>
+<!--        <div class="footer-col-instagram-grid">-->
+<!--          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">-->
+<!--          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">-->
+<!--          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">-->
+<!--          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">-->
+<!--          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">-->
+<!--          <img src="https://scontent.cdninstagram.com/v/t51.2885-15/e35/s150x150/26405435_524198084627230_4393086906208878592_n.jpg?_nc_ht=scontent.cdninstagram.com&oh=494377ce4332c275946d113e86ed4ee2&oe=5E6DCCE3" alt="insta" class="footer-insta-image">-->
+<!--        </div>-->
       </div>
       <div class="footer-col footer-col4">
         <div class="footer-col-heading">
