--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -47,7 +47,8 @@
       <i class="fa fa-bars fa-lg fa-black-color"></i>
     </button>
     <a class="navbar-brand" href="<%= root_path %>">
-      <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image-md">
+      <%=image_tag 'Plus1-01.png', class: 'logo-image-md' %>
+<!--      <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image-md">-->
 
     </a>
 
