--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -192,7 +192,7 @@
     <div class="counter-back-image">
       <div class="counter-background-color-blue">
         <div class="counter-item">
-          <div class="counter-item-image-container counter-item-image-container-first">
+          <div class="counter-item-image-container ">
             <%=image_tag 'Slider4/Oncology .png' %>
           </div>
           <div class="count counter-value">
@@ -226,7 +226,7 @@
         </div>
         <div class="counter-item">
           <div class="counter-item-image-container ">
-            <%=image_tag 'Slider4/Cardio.png' %>
+            <%=image_tag 'Slider4/Gyna.png' %>
           </div>
           <div class="count counter-value">
             5
