--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -93,6 +93,6 @@
       </div>
     </div>
   </section>
-    <%= render partial: 'working_hours'%>
+    <%#= render partial: 'working_hours'%>
     <%#= render partial: 'qualified' %>
 </main>
