--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,12 +1,12 @@
 <% provide(:title, 'Booking') %>
-<section class="slider">
+<section class="slider padding-top-75">
   <div class="slider-back-image-container-contact">
     <div class="slider-text-container">
       <div class="slider-heading heading-lg">
-        <%= t :contact %>
+        <%= t :contact_us %>
       </div>
       <div class="slider-text white-text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam beatae, doloremque earum molestias repudiandae vel?
+<!--        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam beatae, doloremque earum molestias repudiandae vel?-->
       </div>
     </div>
   </div>
