--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -40,6 +40,8 @@
     margin: 45px 20px 60px;
     align-items: center;
     border-right: 1px dashed #cccccc;
+    flex: 1;
+    flex-direction: column;
     @media only screen and (max-width: 800px) {
       border-bottom:1px dashed #cccccc;
       border-right: none;
@@ -56,7 +58,7 @@
   }
   &-detail{
     flex: 0 0 65%;
-    padding: 10px 50px 10px 0px;
+    //padding: 10px 50px 10px 0px;
     //border-right: 1px dashed #cccccc;
     @media only screen and (max-width: 800px) {
      border-right: none;
@@ -136,14 +138,15 @@
   &-card-heading{
     color: #181c1b;
     font-family: 'Roboto',sans-serif;
-    font-size: 24px;
+    font-size: 26px;
     line-height: 43px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     letter-spacing: 0px;
     text-transform: none;
     //text-align: right;
     margin: 15px 0;
+    text-align: center;
   }
   &-blue-card{
     background-color: #00a0f0;
@@ -595,7 +598,7 @@
   //padding: 25px;
 }
 .slider-five-background-image-container{
-  height: 450px;
+  height: 300px;
   //background-image: image_url('Slider5/1.jpg');
   background-size: cover;
   background-position: right;
@@ -614,4 +617,8 @@
 .slider-eight{
   position: relative;
   height: 300px;
+}
+.slider-heading-sm{
+  font-size: 40px;
+  font-weight: 500;
 }
