--- a/app/assets/stylesheets/slider.scss
+++ b/app/assets/stylesheets/slider.scss
@@ -15,11 +15,13 @@
     transform: scale(1.5);
 }
 .slider{
+  position: relative;
   &-back-image-container{
       background-image: image_url('AboutUs/ABOUT-US-.jpg');
     height: 450px;
     margin-bottom: 75px;
     background-position: top;
+    //position: relative;
     @media only screen and (max-width:786px) {
       height: 100vh;
       background-size: cover;
@@ -51,6 +53,9 @@
     color: #fff;
     line-height: 87px;
     font-size: 75px;
+    white-space: nowrap;
+
+    //font-weight: 500;
    // direction: rtl;
   }
   &-text{
@@ -74,14 +79,14 @@
     padding: 20px;
     max-width: 100vw;
     overflow: hidden;
-    width: 80vh;
+    //width: 80vh;
     min-width: 300px;
 
   }
   &-heading{
     font-size: 60px;
     line-height: 87px;
-    font-weight: 300;
+    font-weight: 500;
     //white-space: nowrap;
     @media only screen and(max-width: 768px) {
       white-space: pre-wrap;
