--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!!DOCTYPE html>
 <html>
   <head>
-    <title>PulsApp</title>
+    <title>Plus one</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet">
@@ -31,6 +31,12 @@
           autoplaySpeed: 2000,
           autoplay: true,
       });
+      $("#slideshow-2").slick({
+          infinite: true,
+          autoplaySpeed: 600,
+          autoplay: true,
+      });
+
 
       $('.language-change').change(function (e) {
           console.log("contact")
