--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -209,7 +209,7 @@
     </div>
   </section>
 
-  <section class="slider-seven <%= is_arabic? ? 'text-right-custom': '' %>">
+  <section class="slider-seven <%= is_arabic? ? 'text-right-custom': '' %>" style="direction: ltr">
     <div id="slideshow-2" class="sliders">
       <div class="active-slide slide">
         <%= image_tag "shutterstock_797358901.jpg", class:"image" %>
