--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -254,13 +254,13 @@
 }
 .counter{
   &-back-image{
-    background-image: url("https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/parallax-1.jpg");
+    background-image: image_url('shutterstock_1012561585.jpg');
     background-attachment: fixed;
     height: 340px;
     background-position: top;
     @media only screen and (max-width: 768px) {
       height: auto;
-      padding: 40px 0;
+      //padding: 40px 0;
     }
   }
   &-image{
@@ -269,13 +269,17 @@
   }
   &-background-color-blue{
     display: flex;
-    width: 80%;
+    width: 100%;
     margin: auto;
+    padding-left: 10%;
+    padding-right: 10%;
     align-items: center;
+    background-color: #00a0f0bf;
     height: 100%;
     justify-content: center;
     @media only screen and (max-width: 1100px) {
       width: 100%;
+      padding: 40px 0;
     }
     @media only screen and (max-width: 768px) {
       flex-wrap: wrap;
