--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
     <div class="menu-items-container u-d-flex u-justify-content-space-between u-flex-1">
       <div class="logo-container u-d-flex u-justify-content-center">
         <div class="header-img-color">
-          <%=image_tag 'Plus1-01.png', class: 'logo-img' %>
+          <%=image_tag 'logoWhi.png', class: 'logo-img' %>
         </div>
 <!--        <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image">-->
       </div>
@@ -46,12 +46,13 @@
     <button class="navbar-toggler botton-nav-bar" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fa fa-bars fa-lg fa-black-color"></i>
     </button>
+    <div class="header-img-color-md">
     <a class="navbar-brand" href="<%= root_path %>">
-      <%=image_tag 'Plus1-01.png', class: 'logo-image-md' %>
+      <%=image_tag 'logoWhi.png', class: 'logo-image-md' %>
 <!--      <img src="https://bridge133.qodeinteractive.com/wp-content/uploads/2018/01/main-logo.jpg" alt="Logo" class="logo-image-md">-->
 
     </a>
-
+    </div>
     <div class="collapse navbar-collapse nav-bar-collapse-data" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
